fix(player): fix overlays z-index

--- a/src/style/_player.scss
+++ b/src/style/_player.scss
@@ -21,6 +21,8 @@ video {
 .overlays {
     height: 100%;
     width: 100%;
+    position: absolute;
+    z-index: 1;
 }
 
 .box {
